blocks/header/header.css
/* ... */
.dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .authenticated-user-menu li {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .authenticated-user-menu li > a {
  padding: 12px 15px;
  display: inline-block;
  width: 100%;
  text-decoration: none;
}

.dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .authenticated-user-menu li > a:hover,
.dropdown-wrapper.nav-tools-wrapper
.nav-auth-menu-panel
.authenticated-user-menu
li
> .logoutButton:hover {
  background-color: lightgray;
}

.dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .authenticated-user-menu li button {
  cursor: pointer;
  background-color: transparent !important;
  color: currentcolor !important;
  padding: 12px 15px !important;
  display: inline-block !important;
  width: 100% !important;
  text-decoration: none !important;
  font: var(--type-body-1-strong-font) !important;
  letter-spacing: var(--type-body-1-strong-letter-spacing) !important;
  margin: 0 !important;
  text-align: start !important;
  box-sizing: border-box !important;
  border: none !important;
  border-radius: 0 !important;
}

.dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .authenticated-user-menu li button:hover {
  background-color: lightgray !important;
  border-radius: 0 !important;
}

.grecaptcha-badge {
  margin-top: 20px;
  z-index: 3;
}

.overlay {
  background-color: rgb(0 0 0 / 50%) !important;
  display: none;
  inset: 0;
  position: fixed;
  z-index: 2;
}

.overlay.show {
  display: block;
}

@media (width < 900px) {
  header {
    position: relative;
  }

  header .nav-wrapper.active,
  header .nav-wrapper:has( nav[aria-expanded='true']) {
    width: 320px;
  }

  header .nav-wrapper.active nav .nav-hamburger button,
  header .nav-wrapper:has( nav[aria-expanded='true']) nav .nav-hamburger button {
    position: fixed;
    left: 275px;
    top: 20px;
    z-index: 5;
  }

  header nav {
    position: relative;
  }

  header nav[aria-expanded='true'] {
    gap: var(--spacing-small);
    overflow-x: hidden;
    width: 320px;
  }

  header nav[aria-expanded='true'] .nav-tools {
    background: var(--background-color);
    bottom: 0;
    height: auto;
    left: 0;
    overflow: hidden;
    padding: var(--spacing-small);
    position: fixed;
    width: 288px;
  }

  header nav[aria-expanded='true'] .nav-tools-panel--show {
    position: fixed;
  }

  header nav .nav-sections {
    position: relative;
  }

  header nav .nav-sections ul {
    margin: 0;
  }

  header nav .nav-sections ul li {
    font: var(--type-headline-2-default-font);
    letter-spacing: var(--type-headline-2-default-letter-spacing);
    padding: var(--spacing-small);
  }

  header nav .nav-sections ul li a {
    font: var(--type-headline-2-default-font);
    letter-spacing: var(--type-headline-2-default-letter-spacing);
  }

  header nav .nav-sections ul > li ul {
    width: 100%;
  }

  header nav .nav-sections ul > li ul > li {
    font: var(--type-headline-2-default-font);
    letter-spacing: var(--type-headline-2-default-letter-spacing);
    padding: var(--spacing-xsmall);
    width: auto;
  }

  header nav .nav-sections ul > li ul > li a {
    font: var(--type-headline-2-default-font);
    letter-spacing: var(--type-headline-2-default-letter-spacing);
  }

  header nav .nav-sections ul > li ul > li.break {
    margin-top: var(--spacing-xsmall);
  }

  header nav .nav-sections ul > li ul > li:has(img) {
    margin: var(--spacing-small) 0;
    padding: 0;
  }

  header nav .nav-sections ul > li.nav-drop {
    cursor: pointer;
  }

  header nav .nav-sections ul > li.nav-drop::before {
    content: '\276F';
    position: absolute;
    right: var(--spacing-xxsmall);
  }

  header nav .nav-sections ul > li.nav-drop ul {
    display: none;
    outline: none;
  }

  header nav .nav-sections ul > li.nav-drop .submenu-wrapper {
    display: none;
  }

  header nav .nav-sections ul > li.nav-drop.active .submenu-wrapper {
    background: var(--background-color);
    display: block;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 3;
  }

  header nav .nav-sections ul > li.nav-drop.active ul {
    display: block;
    padding-bottom: var(--spacing-large);
  }

  header nav .nav-sections ul > li.nav-drop .submenu-header {
    background: var(--background-color);
    height: var(--spacing-large);
    left: 0;
    position: fixed;
    top: 0;
    width: 320px;
    z-index: 3;
  }

  header nav .nav-sections ul > li.nav-drop .submenu-header .back-link {
    font: var(--type-body-1-strong-font);
    height: 2.2em;
    letter-spacing: var(--type-body-1-strong-letter-spacing);
    line-height: 2.2em;
    padding: 0 var(--spacing-medium);
  }

  header nav .nav-sections ul > li.nav-drop .submenu-header hr {
    margin: 0;
    position: absolute;
    top: var(--spacing-large);
    width: 320px;
  }

  header nav .nav-sections ul > li .submenu-header .back-link::before {
    content: '\276E';
    margin-right: var(--spacing-xsmall);
  }

  header nav .nav-sections ul > li.nav-drop .submenu-title {
    font: var(--type-body-1-default-font);
    letter-spacing: var(--type-body-1-default-letter-spacing);
    margin-bottom: var(--spacing-small);
  }

  header nav .nav-sections ul li:not(.break):empty {
    display: none;
  }
}

